--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -37,6 +37,15 @@
           <li class="header__list-item">
             <a href="#" class="header__nav-link">About us</a>
           </li>
+          <li class="header__list-item">
+            <a href="../animation.html" class="header__nav-link">Animation</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__nav-link">SVG</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__nav-link">Grid</a>
+          </li>
         </ul>
       </nav>
       <svg
