--- a/source/scss/_blocks/button.scss
+++ b/source/scss/_blocks/button.scss
@@ -8,6 +8,7 @@
   background: black;
   padding: 9px 23px;
   display: inline-block;
+  transition: all 400ms;
   &:hover {
     background-color: #c29974;
   }
