--- a/source/scss/_blocks/footer.scss
+++ b/source/scss/_blocks/footer.scss
@@ -33,6 +33,7 @@
 
 .navigation__link {
   color: #ffffff;
+  transition: all 400ms;
   &:hover {
     opacity: 0.5;
   }
@@ -50,6 +51,7 @@
   background-color: #666666;
   color: white;
   border: none;
+  transition: all 400ms; /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
   &:hover,
   &:active,
@@ -79,6 +81,7 @@
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: center;
+  transition: all 400ms;
   &:hover {
     opacity: 0.5;
   }
@@ -109,6 +112,7 @@
   border: 0;
   column-gap: 3px;
   align-items: center;
+  transition: all 400ms;
 
   &:hover .footer__rating-caption,
   &:focus-within .footer__rating-caption {
@@ -137,6 +141,7 @@
   height: 13px;
   background-size: 13px;
   background-repeat: no-repeat;
+  transition: all 400ms;
 
   &:focus {
     outline: none;
@@ -188,6 +193,7 @@
 
 .footer__developer-link {
   color: #a2a2a2;
+  transition: all 400ms;
   &:hover {
     color: #ffffff;
     text-decoration: underline;
