--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -22,7 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.page_container {
+.page-container {
   box-sizing: border-box;
   width: 1180px;
   margin-left: auto;
