--- a/source/views/blocks/footer.html
+++ b/source/views/blocks/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="page_container">
+  <div class="page-container">
     <nav class="footer__menu">
       <div class="navigation">
         <h2 class="navigation__title">Navigation</h2>
