--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="page_container">
+  <div class="page-container">
     <header class="header__content">
       <a href="/index.html" class="header__logo-link">
         <svg
