--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -25,6 +25,8 @@
 @import "_blocks/button";
 @import "_blocks/breadcrump";
 @import "_blocks/category";
+@import "_blocks/animation";
+@import "_blocks/svg";
 /*
   Ниже пример подключения других блоков
 
@@ -447,7 +449,7 @@
 }
 
 .contact-us {
-  margin-bottom: 57px;
+  margin-bottom: 60px;
 }
 
 .contact-us__title {
@@ -645,678 +647,3 @@
 ////////////////////////////////////////////////////////////////////
 /////////////////////TOYS/////////end///////////////////////////
 ////////////////////////////////////////////////////////////////////
-
-////////////////////////////////////////////////////////////////////
-/////////////////////ANIMATION/////////start///////////////////////////
-////////////////////////////////////////////////////////////////////
-
-.animation {
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-.animation__town {
-  margin-top: 8.3%;
-  margin-bottom: 3.6%;
-  width: 100%;
-}
-
-.animation__sun {
-  position: absolute;
-  top: 0.4%;
-  right: 18.3%;
-  width: 3.5%;
-}
-///////////////////////////////Анимации облаков///////////////////////////
-.animation__cloud1 {
-  position: absolute;
-  top: 1.5%;
-  left: 12.8%;
-  width: 5.6%;
-  animation: cloud1-moving 50s ease infinite alternate 1s;
-}
-@keyframes cloud1-moving {
-  0% {
-    left: 12.8%;
-  }
-  50% {
-    left: 20.8%;
-  }
-  100% {
-    left: 12.8%;
-  }
-}
-.animation__cloud2 {
-  position: absolute;
-  top: 5.7%;
-  left: 29.2%;
-  width: 11.6%;
-  animation: cloud2-moving 40s ease infinite alternate 1s;
-}
-@keyframes cloud2-moving {
-  0% {
-    left: 29.2%;
-  }
-  50% {
-    left: 21.8%;
-  }
-  100% {
-    left: 29.2%;
-  }
-}
-.animation__cloud3 {
-  position: absolute;
-  top: 1.4%;
-  left: 44.6%;
-  width: 9.4%;
-  animation: cloud3-moving 30s ease infinite alternate 1s;
-}
-@keyframes cloud3-moving {
-  0% {
-    left: 44.6%;
-  }
-  50% {
-    left: 47.8%;
-  }
-  100% {
-    left: 44.6%;
-  }
-}
-.animation__cloud4 {
-  position: absolute;
-  top: 11.4%;
-  left: 51.7%;
-  width: 12%;
-  animation: cloud4-moving 30s ease infinite alternate 1s;
-}
-@keyframes cloud4-moving {
-  0% {
-    left: 51.7%;
-  }
-  50% {
-    left: 56.7%;
-  }
-  100% {
-    left: 51.7%;
-  }
-}
-.animation__cloud5 {
-  position: absolute;
-  top: 5.7%;
-  left: 69.3%;
-  width: 5.5%;
-  animation: cloud5-moving 60s ease infinite alternate 1s;
-}
-@keyframes cloud5-moving {
-  0% {
-    left: 69.3%;
-  }
-  50% {
-    left: 80.8%;
-  }
-  100% {
-    left: 69.3%;
-  }
-}
-.animation__cloud6 {
-  position: absolute;
-  top: 5.5%;
-  left: 83.5%;
-  width: 10%;
-  animation: cloud6-moving 65s ease infinite alternate 1s;
-}
-@keyframes cloud6-moving {
-  0% {
-    left: 83%;
-  }
-  50% {
-    left: 65.8%;
-  }
-  100% {
-    left: 83%;
-  }
-}
-////////////////////////////Машина 1//////////////////////////////////////////
-.animation__car1 {
-  position: absolute;
-  // left: 4.6%; //макет
-  left: -20%;
-  top: 51.2%;
-  width: 15%;
-  z-index: 2;
-  animation: car1-moving 5s linear infinite 1s;
-}
-@keyframes car1-moving {
-  0% {
-    left: -20%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-.animation__car1-wheel-1,
-.animation__car1-wheel-2 {
-  top: 57.9%;
-  width: 2.6%;
-  z-index: 2;
-}
-.animation__car1-wheel-1 {
-  position: absolute;
-  // left: 15.6%; //макет
-  left: -20%;
-  animation: car1-wheel-1-moving 5s linear infinite 1s;
-}
-@keyframes car1-wheel-1-moving {
-  0% {
-    left: -9%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 111%;
-    rotate: 10turn;
-  }
-}
-.animation__car1-wheel-2 {
-  position: absolute;
-  // left: 6.8%; //макет
-  left: -20%;
-  animation: car1-wheel-2-moving 5s linear infinite 1s;
-}
-@keyframes car1-wheel-2-moving {
-  0% {
-    left: -17.8%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 102.2%;
-    rotate: 10turn;
-  }
-}
-////////////////////////////Машина 2//////////////////////////////////////////
-.animation__car2 {
-  position: absolute;
-  top: 51.3%;
-  // left: 27.5%; //макет
-  left: -20%;
-  width: 12.5%;
-  z-index: 2;
-  animation: car2-moving 3s linear infinite 3s;
-}
-@keyframes car2-moving {
-  0% {
-    left: -20%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-.animation__car2-wheel-1,
-.animation__car2-wheel-2 {
-  top: 58.9%;
-  width: 2%;
-  z-index: 2;
-}
-.animation__car2-wheel-1 {
-  position: absolute;
-  // left: 36.9%; //макет
-  left: -20%;
-  animation: car2-wheel-1-moving 3s linear infinite 3s;
-}
-@keyframes car2-wheel-1-moving {
-  0% {
-    left: -10.6%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 109.4%;
-    rotate: 10turn;
-  }
-}
-.animation__car2-wheel-2 {
-  position: absolute;
-  // left: 28.5%; //макет
-  left: -20%;
-  animation: car2-wheel-2-moving 3s linear infinite 3s;
-}
-@keyframes car2-wheel-2-moving {
-  0% {
-    left: -19%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 101%;
-    rotate: 10turn;
-  }
-}
-////////////////////////////Машина 3//////////////////////////////////////////
-.animation__car3 {
-  position: absolute;
-  // left: 45.5%; //макет
-  left: -20%;
-  top: 52.8%;
-  width: 14.8%;
-  animation: car3-moving 9s linear infinite 5s;
-}
-@keyframes car3-moving {
-  0% {
-    left: -20%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-.animation__car3-wheel-1,
-.animation__car3-wheel-2 {
-  top: 57.3%;
-  width: 1.7%;
-  z-index: 1;
-}
-.animation__car3-wheel-1 {
-  position: absolute;
-  // left: 56.6%; //макет
-  left: -20%;
-  animation: car3-wheel-1-moving 9s linear infinite 5s;
-}
-@keyframes car3-wheel-1-moving {
-  0% {
-    left: -8.9%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 111.1%;
-    rotate: 10turn;
-  }
-}
-.animation__car3-wheel-2 {
-  position: absolute;
-  // left: 48%; //макет
-  left: -20%;
-  animation: car3-wheel-2-moving 9s linear infinite 5s;
-}
-@keyframes car3-wheel-2-moving {
-  0% {
-    left: -17.5%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 102.5%;
-    rotate: 10turn;
-  }
-}
-////////////////////////////Машина 4//////////////////////////////////////////
-.animation__car4 {
-  position: absolute;
-  // left: 78.8%; //макет
-  left: -20%;
-  top: 49.5%;
-  width: 16%;
-  z-index: 2;
-  animation: car4-moving 7s linear infinite 8s;
-}
-@keyframes car4-moving {
-  0% {
-    left: -20%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-.animation__car4-wheel-1,
-.animation__car4-wheel-2 {
-  top: 58.9%;
-  width: 2.8%;
-  z-index: 2;
-}
-.animation__car4-wheel-1 {
-  position: absolute;
-  // left: 90.4%; //макет
-  left: -20%;
-  animation: car4-wheel-1-moving 7s linear infinite 8s;
-}
-@keyframes car4-wheel-1-moving {
-  0% {
-    left: -8.4%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 111.6%;
-    rotate: 10turn;
-  }
-}
-.animation__car4-wheel-2 {
-  position: absolute;
-  // left: 81%; //макет
-  left: -20%;
-  animation: car4-wheel-2-moving 7s linear infinite 8s;
-}
-@keyframes car4-wheel-2-moving {
-  0% {
-    left: -17.8%;
-    rotate: 0turn;
-  }
-  100% {
-    left: 102.2%;
-    rotate: 10turn;
-  }
-}
-//////////////////////////////////////////////////////////
-
-.animation__lantern {
-  position: absolute;
-  left: 34.3%;
-  top: 20.8%;
-  width: 9%;
-  z-index: 4;
-}
-.animation__lantern2 {
-  position: absolute;
-  left: 86.3%;
-  top: 21.1%;
-  width: 9%;
-  z-index: 4;
-}
-.animation__lantern-color {
-  position: absolute;
-  left: 69.5%;
-  top: 19.6%;
-  width: 12.9%;
-  z-index: 9;
-}
-
-.animation__woman {
-  position: absolute;
-  left: 18.6%;
-  top: 54.8%;
-  width: 11.5%;
-  z-index: 6;
-}
-.animation__skirt {
-  position: absolute;
-  left: 19.4%;
-  top: 70.2%;
-  width: 5.5%;
-  z-index: 8;
-}
-
-.animation__man {
-  position: absolute;
-  left: 25.6%;
-  top: 44.5%;
-  width: 12.3%;
-  z-index: 9;
-}
-/////////////////////////////// Облако собщений/////////////////////////
-.animation__message-cloud-left,
-.animation__message-cloud-right {
-  position: relative;
-  box-sizing: border-box;
-  width: 172px;
-  padding: 16px;
-  font-size: 17px;
-  line-height: 21px;
-  background-color: #fff;
-  border-radius: 13px;
-  text-align: left;
-  &::after {
-    position: absolute;
-    top: 80%;
-    content: "";
-    display: block;
-    width: 42px;
-    height: 42px;
-    background-image: url("../img/icons/corner.svg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-}
-.animation__message-cloud-left {
-  &::after {
-    left: 60%;
-  }
-}
-.animation__message-cloud-right {
-  &::after {
-    left: 15%;
-  }
-}
-
-///////////////////////////Анимация///////////////////////////////////////////
-
-////////////////////////////Действие 1 - сообщение женщины//////////////////////
-.animation__message-1 {
-  position: absolute;
-  left: 13.4%;
-  top: 42.3%;
-  z-index: 9;
-  visibility: hidden;
-  animation: text1-appearing 12s linear infinite 4s;
-}
-@keyframes text1-appearing {
-  0% {
-    visibility: hidden;
-  }
-  10% {
-    visibility: visible;
-  }
-  15% {
-    visibility: hidden;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
-////////////////////////////Действие 2 - Поднимается рука женщины//////////////////////
-.animation__woman-hand {
-  position: absolute;
-  left: 20.8%;
-  top: 68.1%;
-  width: 3.6%;
-  z-index: 7;
-  transform: rotate(360deg);
-  transform-origin: 22% 19%;
-  animation: woman-hand-moving 12s linear infinite 4s;
-}
-@keyframes woman-hand-moving {
-  0% {
-    transform: rotate(360deg);
-  }
-  10% {
-    transform: rotate(303deg);
-  }
-  20% {
-    transform: rotate(303deg);
-  }
-  35% {
-    transform: rotate(360deg);
-    z-index: 9;
-  }
-  80% {
-    transform: rotate(360deg);
-    z-index: 9;
-  }
-  82% {
-    transform: rotate(355deg);
-    z-index: 9;
-  }
-  84% {
-    transform: rotate(360deg);
-    z-index: 7;
-  }
-  100% {
-    transform: rotate(360deg);
-    z-index: 7;
-  }
-}
-////////////////////////////Действие 3 - Поднимается рука мужчины//////////////////////
-.animation__man-hand {
-  position: absolute;
-  left: 25.8%;
-  top: 40.4%;
-  width: 5%;
-  z-index: 8;
-  transform: rotate(153deg);
-  transform-origin: 12% 90%;
-  animation: man-hand-moving 12s linear infinite 6s;
-}
-@keyframes man-hand-moving {
-  0% {
-    transform: rotate(153deg);
-  }
-  10% {
-    transform: rotate(0deg);
-  }
-  30% {
-    transform: rotate(0deg);
-  }
-  35% {
-    transform: rotate(153deg);
-  }
-  100% {
-    transform: rotate(153deg);
-  }
-}
-////////////////////////////Действие 4 - Сообщение мужчины//////////////////////
-.animation__message-2 {
-  position: absolute;
-  left: 24.7%;
-  top: 34.5%;
-  z-index: 9;
-  visibility: hidden;
-  animation: text2-appearing 12s linear infinite 7s;
-}
-@keyframes text2-appearing {
-  0% {
-    visibility: hidden;
-  }
-  10% {
-    visibility: visible;
-  }
-  15% {
-    visibility: hidden;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
-////////////////////////////Действие 5 - Приезжает такси//////////////////////
-.animation__taxi {
-  position: absolute;
-  // left: 41.2%; //макет
-  top: 48.1%;
-  width: 53.4%;
-  z-index: 5;
-  animation: taxi-moving 12s ease-in-out infinite 8s;
-}
-@keyframes taxi-moving {
-  0% {
-    left: 100%;
-  }
-  15% {
-    left: 41.2%;
-  }
-  35% {
-    left: 41.2%;
-  }
-  100% {
-    left: -200%;
-  }
-}
-.animation__taxi-wheel-1,
-.animation__taxi-wheel-2 {
-  top: 69.5%;
-  width: 4%;
-  z-index: 5;
-}
-.animation__taxi-wheel-1 {
-  position: absolute;
-  // left: 49.4%; //макет
-  left: -20%;
-  animation: taxi-wheel-1-moving 12s ease-in-out infinite 8s;
-}
-@keyframes taxi-wheel-1-moving {
-  0% {
-    left: 108.2%;
-  }
-  15% {
-    left: 49.4%;
-    rotate: -4turn;
-  }
-  35% {
-    left: 49.4%;
-    rotate: -4turn;
-  }
-  100% {
-    left: -191.8%;
-    rotate: -10turn;
-  }
-}
-.animation__taxi-wheel-2 {
-  position: absolute;
-  // left: 80.4%; //макет
-  left: -20%;
-  animation: taxi-wheel-2-moving 12s ease-in-out infinite 8s;
-}
-@keyframes taxi-wheel-2-moving {
-  0% {
-    left: 139.2%;
-  }
-  15% {
-    left: 80.4%;
-    rotate: -4turn;
-  }
-  35% {
-    left: 80.4%;
-    rotate: -4turn;
-  }
-  100% {
-    left: -160.8%;
-    rotate: -10turn;
-  }
-}
-////////////////////////////Действие 6 - Сообщение таксиста//////////////////////
-.animation__message-3 {
-  position: absolute;
-  left: 60.5%;
-  top: 42%;
-  z-index: 9;
-  visibility: hidden;
-  animation: text3-appearing 12s linear infinite 10s;
-}
-@keyframes text3-appearing {
-  0% {
-    visibility: hidden;
-  }
-  10% {
-    visibility: visible;
-  }
-  15% {
-    visibility: hidden;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
-////////////////////////////Действие 7 - Сообщение мужчины//////////////////////
-.animation__message-4 {
-  position: absolute;
-  left: 25%;
-  top: 34.6%;
-  z-index: 9;
-  visibility: hidden;
-  animation: text4-appearing 12s linear infinite 12s;
-}
-@keyframes text4-appearing {
-  0% {
-    visibility: hidden;
-  }
-  10% {
-    visibility: visible;
-  }
-  15% {
-    visibility: hidden;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
