--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -41,7 +41,7 @@
             <a href="../animation.html" class="header__nav-link">Animation</a>
           </li>
           <li class="header__list-item">
-            <a href="#" class="header__nav-link">SVG</a>
+            <a href="../../svg.html" class="header__nav-link">SVG</a>
           </li>
           <li class="header__list-item">
             <a href="#" class="header__nav-link">Grid</a>
