--- a/source/scss/_blocks/container.scss
+++ b/source/scss/_blocks/container.scss
@@ -1,6 +1,13 @@
 .page-container {
   box-sizing: border-box;
-  width: 1180px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 110px;
+  margin-right: 110px;
+  @media (min-width: 768px) and (max-width: 1399px) {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+  @media (max-width: 767px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
