--- a/source/views/blocks/footer.html
+++ b/source/views/blocks/footer.html
@@ -49,7 +49,7 @@
           </li>
         </ul>
       </div>
-      <div class="navigation">
+      <div class="navigation navigation__connect">
         <h2 class="navigation__title">Connect</h2>
         <form class="subscribe">
           <input
