--- a/source/scss/_blocks/breadcrump.scss
+++ b/source/scss/_blocks/breadcrump.scss
@@ -30,9 +30,36 @@
     opacity: 0.5;
   }
 }
-
 .breadcrump__link {
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
+}
+
+@media (min-width: 768px) and (max-width: 1399px) {
+  .breadcrump {
+    margin-bottom: 28px;
+    margin-top: 9px;
+  }
+}
+@media (max-width: 767px) {
+  .breadcrump {
+    margin-bottom: 16px;
+    margin-top: 7px;
+  }
+  .breadcrump__link {
+    font-size: 16px;
+  }
+  .breadcrump__item {
+    &:nth-child(n + 2) {
+      margin-left: 36px;
+      &:nth-child(n + 2):before {
+        height: 9px;
+        left: -21px;
+        position: absolute;
+        top: 9px;
+        width: 6px;
+      }
+    }
+  }
 }
