--- a/source/scss/_blocks/checkbox.scss
+++ b/source/scss/_blocks/checkbox.scss
@@ -6,18 +6,30 @@
 }
 
 .checkbox__name {
+  display: flex;
   &:before {
     content: "";
-    display: inline-block;
-    vertical-align: sub;
+    display: block;
+    vertical-align: middle;
     width: 20px;
     height: 20px;
     background-image: url("../../img/icons/checkbox.svg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: contain;
+    // background-position: 40% 40%;
     margin-right: 10px;
-  }
-  &:hover {
-    text-decoration: underline black;
+    transform: translate(0, -10%);
+    @media (max-width: 767px) {
+      width: 30px;
+      height: 30px;
+      margin-right: 14px;
+      transform: translate(0, 7%);
+    }
+    @media (min-width: 768px) and (max-width: 1399px) {
+      margin-right: 15px;
+    }
+    &:hover {
+      text-decoration: underline black;
+    }
   }
 }
