--- a/source/scss/_blocks/product.scss
+++ b/source/scss/_blocks/product.scss
@@ -32,10 +32,15 @@
 
 .product__title {
   margin-top: 26px;
+  margin-bottom: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 19px;
   text-align: center;
+  @media (max-width: 1399px) {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
 .product__price {
@@ -45,6 +50,9 @@
   font-size: 16px;
   line-height: 22px;
   text-align: center;
+  @media (max-width: 1399px) {
+    margin-top: 7px;
+  }
 }
 
 .product__link {
@@ -63,4 +71,24 @@
   font-size: 26px;
   line-height: 29px;
   text-transform: uppercase;
+}
+@media (max-width: 767px) {
+  .product__price {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .product__title {
+    margin-top: 10px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .product__title {
+    margin-top: 14px;
+  }
+  .product__price {
+    font-size: 14px;
+    line-height: 19px;
+  }
+}
+@media (min-width: 1400px) {
 }
