--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -43,9 +43,6 @@
   Не стал выносить в отдельный файл, но если бы блок coming-soon действительно был бы нужен,
   то он должен был бы быть в файле _blocks/coming-soon.scss
 */
-.main {
-  margin-top: 160px;
-}
 
 ////////////////////////////////////////////////////////////////////
 /////////////////////INDEX/////////start///////////////////////////
@@ -54,20 +51,13 @@
 /* Стили баннера */
 .banner {
   margin-top: 230px;
-}
-
-.banner__container {
-  display: flex;
-  background-color: #eee4db;
-  padding: 17px 30px;
   position: relative;
-
   &::after {
+    bottom: 8px;
+    height: 120%;
+    right: 8%;
+    width: 55%;
     content: "";
-    width: 56%;
-    height: 131%;
-    right: 89px;
-    bottom: -30px;
     z-index: 0;
     background-image: url("/img/images/bannerMonster.png");
     background-repeat: no-repeat;
@@ -76,7 +66,11 @@
     position: absolute;
   }
 }
-
+.banner__container {
+  display: flex;
+  background-color: #eee4db;
+  padding: 17px 30px;
+}
 .banner__number {
   font-size: 60px;
   line-height: 73px;
@@ -86,7 +80,6 @@
 .banner__change-buttons {
   padding-left: 0;
 }
-
 .banner__button {
   background-color: #d6cac2;
   height: 3px;
@@ -102,13 +95,12 @@
     cursor: pointer;
   }
 }
-
 .banner__content {
   margin-left: 44px;
   margin-top: 69px;
   margin-bottom: 72px;
-  width: 45%;
-  z-index: 1;
+  max-width: 307px;
+  z-index: 0;
 }
 
 .banner__title {
@@ -139,6 +131,96 @@
   margin: 0;
   position: relative;
   z-index: 1;
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .banner {
+    margin-top: -35px;
+  }
+  .banner__number {
+    font-size: 48px;
+    line-height: 58px;
+  }
+  .banner__change-buttons {
+    margin-top: 6px;
+  }
+  .banner {
+    &::after {
+      width: 60%;
+      height: 72%;
+      right: 8px;
+      bottom: 27px;
+    }
+  }
+  .banner__container {
+    padding: 15px 0 30px;
+  }
+  .banner__content {
+    margin-bottom: 72px;
+    margin-left: 12px;
+    margin-top: 58px;
+  }
+}
+@media (max-width: 767px) {
+  .banner {
+    margin-top: -20px;
+    margin-right: -20px;
+    margin-left: -20px;
+    &::after {
+      bottom: 49px;
+      height: 48%;
+      right: 0px;
+      width: 78%;
+    }
+  }
+  .banner__container {
+    padding: 21px 10px;
+    justify-content: space-between;
+  }
+  .banner__content {
+    order: -1;
+    margin: 53px 11px 167px 11px;
+  }
+  .banner__title {
+    font-size: 36px;
+  }
+  .banner__design-info {
+    font-size: 18px;
+    margin-top: 12px;
+    margin-bottom: 14px;
+  }
+  .banner__number-container {
+    margin-right: 8px;
+  }
+  .banner__change-buttons {
+    margin-top: 8px;
+    margin-right: 9px;
+    padding-right: 0px;
+  }
+  .banner__change-item {
+    margin-right: 0px;
+    padding-right: 0px;
+  }
+  .banner__button {
+    margin-right: 0px;
+    margin-left: auto;
+    padding-right: 0px;
+  }
+}
+@media (max-width: 1399px) {
+  .banner__number {
+    font-size: 48px;
+    line-height: 58px;
+  }
+  .banner__button {
+    width: 27px;
+    margin-top: 0px;
+    margin-bottom: 9px;
+  }
+}
+@media (max-width: 374px) {
+  .banner__title {
+    font-size: 23px;
+  }
 }
 
 /* Стили Category products */
@@ -174,8 +256,32 @@
 .category__scroll-commentary {
   max-width: 580px;
 }
+@media (min-width: 768px) and (max-width: 1399px) {
+  .category__scroll {
+    margin-top: 28px;
+  }
+}
+@media (min-width: 375px) and (max-width: 767px) {
+  .category__scroll {
+    margin-top: 20px;
+  }
+  .category__btn-left,
+  .category__btn-right {
+    width: 33px;
+    height: 33px;
+  }
+}
+@media (max-width: 767px) {
+  .category__scroll-commentary {
+    font-size: 14px;
+    line-height: 19px;
+  }
+  .category__scroll-commentary {
+    max-width: 70%;
+  }
+}
 
-/* Стили Сервисы */
+/* Стили Сервисы */ //////////////////////
 
 .service {
   margin-top: 90px;
@@ -185,13 +291,21 @@
   width: 40%;
 }
 .service__img {
-  width: 480px;
+  width: 100%;
 }
 .service__info {
   padding: 32px 100px 57px 127px;
   width: 60%;
+  @media (min-width: 768px) and (max-width: 1399px) {
+    padding: 28px 0px 51px 54px;
+  }
+  @media (min-width: 501px) and (max-width: 767px) {
+    padding: 0px 0px 51px 54px;
+  }
+  @media (max-width: 500px) {
+    padding: 6px 0 51px 0px;
+  }
 }
-
 .service__title {
   font-size: 38px;
   line-height: 46px;
@@ -206,7 +320,8 @@
   font-weight: 400;
   font-size: 26px;
   line-height: 34px;
-  width: 326px;
+  width: 68%;
+  max-width: 326px;
   height: 55px;
   text-align: start;
   border-width: 0;
@@ -222,6 +337,9 @@
     top: 0;
     left: -60px;
     transition: all 400ms;
+    @media (max-width: 1399px) {
+      left: -20px;
+    }
   }
   &:hover:before {
     background-color: #70bbdc33;
@@ -240,9 +358,74 @@
   & > p:nth-child(2) {
     margin-top: 15px;
   }
+  @media (max-width: 1399px) {
+    font-size: 14px;
+  }
 }
-
-/* Стилизация секции партнеры*/
+@media (min-width: 768px) and (max-width: 1399px) {
+  .service {
+    margin-top: 54px;
+  }
+  .service__title {
+    font-size: 36px;
+  }
+  .service__info {
+    width: 60%;
+  }
+  .service__list {
+    margin-top: 4px;
+  }
+  .service__text {
+    margin-top: 14px;
+    margin-bottom: 23px;
+    line-height: 19px;
+  }
+  .service__button {
+    font-size: 24px;
+    height: 45px;
+    line-height: 31px;
+  }
+}
+@media (min-width: 375px) and (max-width: 767px) {
+  .service__list {
+    margin-top: 9px;
+  }
+  .service__button {
+    font-size: 24px;
+    height: 46px;
+    line-height: 31px;
+  }
+  .service__text {
+    margin-top: 11px;
+  }
+  .service__info {
+    width: 60%;
+  }
+}
+@media (min-width: 500px) and (max-width: 767px) {
+}
+@media (max-width: 500px) {
+  .service__picture {
+    width: 100%;
+  }
+  .service {
+    margin-top: 79px;
+    display: flex;
+    flex-direction: column;
+  }
+  .service__info {
+    width: 100%;
+  }
+  .service__title {
+    font-size: 24px;
+  }
+  .service__text {
+    margin-top: 11px;
+    margin-bottom: 23px;
+    line-height: 19px;
+  }
+}
+/* Стилизация секции партнеры*/ ////////////////////
 
 .parters__title {
   display: none;
@@ -250,12 +433,46 @@
 .partners__list {
   margin-top: 88px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  column-gap: 10%;
   justify-content: space-between;
   align-items: center;
 }
-.partners__list-item {
-  width: auto;
+
+.partners__logo {
+  width: 100%;
+}
+@media (min-width: 376px) and (max-width: 768px) {
+  .partners__list {
+    margin-top: 45px;
+  }
+}
+@media (max-width: 580px) {
+  .partners__list {
+    flex-wrap: wrap;
+    margin-top: 25px;
+    justify-content: space-around;
+  }
+  .partners__list-item {
+    &:nth-child(1) {
+      order: 3;
+      width: 37%;
+      margin-top: 25px;
+    }
+    &:nth-child(2) {
+      order: 2;
+      width: 37%;
+    }
+    &:nth-child(3) {
+      order: 1;
+      width: 44%;
+    }
+    &:nth-child(4) {
+      order: 4;
+      width: 40%;
+      margin-top: 25px;
+    }
+  }
 }
 
 /* Стилизация секции с дополнительной информацией и картой*/
@@ -307,6 +524,69 @@
   margin-bottom: -133px;
   width: 100%;
 }
+@media (min-width: 580px) and (max-width: 1399px) {
+  .supplement__title {
+    font-size: 30px;
+  }
+  .supplement {
+    margin-top: 20px;
+    margin-right: 0;
+    padding-top: 80px;
+    column-gap: 20px;
+    margin-bottom: 154px;
+  }
+  .supplement__article {
+    padding: 1px 14px 25px;
+  }
+  .supplement__contacts {
+    padding: 0 15px;
+  }
+  .supplement__article,
+  .supplement__contacts {
+    width: calc((100% - 20px) / 2);
+  }
+  .supplement__text-contact {
+    margin-top: 20px;
+  }
+  .supplement__map {
+    margin-top: 22px;
+    height: 80%;
+  }
+}
+@media (max-width: 579px) {
+  .supplement {
+    display: block;
+    margin: 95px 0;
+  }
+  .supplement__article,
+  .supplement__contacts {
+    width: 100vw;
+    padding: 1px 20px 25px;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .supplement__contacts {
+    margin-top: 54px;
+  }
+  .supplement__title {
+    font-size: 24px;
+    margin-bottom: 0;
+    margin-top: -28px;
+  }
+  .supplement__notice {
+    font-size: 24px;
+  }
+  .supplement__text {
+    font-size: 14px;
+    line-height: 19px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+  }
+  .supplement__map {
+    margin-top: 0px;
+    height: 100%;
+  }
+}
 
 /* Стилизация Popup "Contact_us" */
 .popup {
@@ -348,6 +628,7 @@
 .open-popup {
   display: flex;
 }
+
 ////////////////////////////////////////////////////////////////////
 /////////////////////INDEX/////////end///////////////////////////
 ////////////////////////////////////////////////////////////////////
@@ -362,19 +643,19 @@
   column-gap: 20px;
   margin-bottom: 54px;
 }
-
 .articles__list-item {
   width: calc((100% - 20px * 2) / 3);
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
   color: #1e0606;
-
   &:nth-child(n + 4) {
     margin-top: 34px;
   }
 }
-
+.articles__img {
+  width: 100%;
+}
 .articles__date {
   display: block;
   margin-top: 13px;
@@ -383,12 +664,11 @@
   line-height: 22px;
   color: #818181;
 }
-
 .articles__title {
-  margin: 7px 0 15px 0;
+  margin: 7px 0 15px;
   font-weight: 700;
   font-size: 24px;
-  line-height: 31px; /////////////////////////////////////////////////////////////////НЕ РАБОТАЕТ////////////////////////////////////////////////////
+  line-height: 31px;
   &:hover {
     text-decoration: underline #1e0606;
     cursor: pointer;
@@ -396,6 +676,50 @@
   }
 }
 
+@media (min-width: 768px) and (max-width: 1399px) {
+  .articles__list {
+    margin-bottom: 45px;
+  }
+  .articles__list-item {
+    width: calc((100% - 20px) / 2);
+    &:nth-child(n + 3) {
+      margin-top: 30px;
+    }
+  }
+  .articles__date {
+    margin-top: 9px;
+  }
+  .articles__title {
+    margin: 3px 0 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .articles__list {
+    display: block;
+    margin-bottom: 37px;
+  }
+  .articles__list-item {
+    width: 100%;
+    font-size: 16px;
+    line-height: 22px;
+    &:nth-child(n + 2) {
+      margin-top: 27px;
+    }
+  }
+  .articles__date {
+    margin-top: 5px;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .articles__title {
+    margin: 4px 0 5px 0;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+@media (max-width: 1399px) {
+}
 ////////////////////////////////////////////////////////////////////
 /////////////////////BLOG/////////end///////////////////////////
 ////////////////////////////////////////////////////////////////////
@@ -409,24 +733,18 @@
 }
 .catalog__list {
   flex-wrap: wrap;
-  width: 1080px;
-}
-
-.catalog__list-item {
-  &:nth-child(6n + 3) {
-    margin-right: 200px;
-  }
-  &:nth-child(6n + 4) {
-    margin-left: 200px;
-  }
-  &:nth-child(n + 4) {
-    margin-top: 23px;
-  }
+  width: 100%;
 }
 
 .catalog__description {
   padding: 0 300px 0 200px;
-  margin-bottom: 55px;
+  margin-bottom: 52px;
+  @media (max-width: 1080px) {
+    padding: 0;
+  }
+  @media (max-width: 1399px) {
+    margin-bottom: 51px;
+  }
 }
 .catalog__description-text {
   margin-top: 25px;
@@ -434,7 +752,79 @@
 .catalog__description-text > p:nth-child(n + 2) {
   margin-top: 15px;
 }
+.catalog__name {
+}
 
+@media (max-width: 767px) {
+  .catalog {
+    margin-bottom: 25px;
+  }
+  .catalog__list-item {
+    width: 160px;
+    height: 154px;
+  }
+  .catalog__name {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .catalog__list {
+    column-gap: 16px;
+    row-gap: 16px;
+  }
+  .catalog__description-text {
+    margin-top: 7px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .catalog {
+    margin-bottom: 41px;
+  }
+  .catalog__list-item {
+    width: 203px;
+    height: 196px;
+  }
+  .catalog__name {
+    font-size: 24px;
+    line-height: 29px;
+  }
+  .catalog__list {
+    column-gap: 20px;
+    row-gap: 20px;
+  }
+  .catalog__description-text {
+    margin-top: 18px;
+  }
+}
+@media (min-width: 1400px) and (max-width: 1950px) {
+  .catalog__list-item {
+    &:nth-child(6n + 3) {
+      margin-right: 16%;
+    }
+    &:nth-child(6n + 4) {
+      margin-left: 16%;
+    }
+  }
+}
+@media (min-width: 1951px) and (max-width: 3160px) {
+  .catalog__list-item {
+    &:nth-child(6n + 3) {
+      margin-right: 30%;
+    }
+    &:nth-child(6n + 4) {
+      margin-left: 30%;
+    }
+  }
+}
+@media (min-width: 3161px) {
+  .catalog__list-item {
+    &:nth-child(6n + 3) {
+      margin-right: 0px;
+    }
+    &:nth-child(6n + 4) {
+      margin-left: 0px;
+    }
+  }
+}
 ////////////////////////////////////////////////////////////////////
 /////////////////////CATALOG/////////end///////////////////////////
 ////////////////////////////////////////////////////////////////////
@@ -451,7 +841,10 @@
 .contact-us {
   margin-bottom: 60px;
 }
-
+.contact-us__form {
+  width: 100%;
+  max-width: 680px;
+}
 .contact-us__title {
   word-spacing: 0.3em;
 }
@@ -469,6 +862,69 @@
   line-height: 34px;
   text-transform: uppercase;
   color: #c29974;
+}
+@media (max-width: 1399px) {
+  .contact-us__wrapper {
+    flex-wrap: wrap;
+  }
+  .contact-us__support-info {
+    order: -1;
+  }
+  .contact-us__support-info {
+    text-align: center;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .contact-us__support-info {
+    margin-top: 4px;
+    margin-bottom: 26px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-size: 14px;
+    line-height: 19px;
+    & > p {
+      margin-bottom: 16px;
+    }
+  }
+  .contact-us__support-appeal {
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .contact-us__form {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 20px;
+    padding-bottom: 25px;
+  }
+  .contact-us__phone-email-container {
+    display: block;
+    margin-top: 7px;
+  }
+
+  .contact-us__email-container {
+    margin-top: 3px;
+  }
+  .contact-us__message-container {
+    margin-top: 4px;
+  }
+  .contact-us__checkbox-container {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .contact-us__support-info {
+    margin-top: 16px;
+    margin-bottom: 45px;
+  }
+  .contact-us__form {
+    padding-left: 53px;
+    padding-right: 53px;
+  }
 }
 
 ////////////////////////////////////////////////////////////////////
@@ -488,13 +944,16 @@
 
 .filter__wrapper {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 21px;
 }
 
 /* Слайдер */
 
 .filter__slider-values {
   width: 207px;
-  height: 89px;
+  height: 80px;
+  margin-right: 94px;
 }
 .filter__cost-field {
   display: none;
@@ -531,7 +990,7 @@
 /* color selection */
 
 .filter__color {
-  margin-left: 94px;
+  margin-right: 124px;
 }
 
 .filter__color-item:nth-child(n + 2) {
@@ -540,7 +999,7 @@
 
 /* delivery radio */
 .filter__delivery {
-  margin-left: 124px;
+  margin-right: 68px;
 }
 
 .delivery-group__item {
@@ -567,6 +1026,7 @@
     background-image: url("../img/icons/radio.png");
     background-repeat: no-repeat;
     background-position: center;
+    transform: translate(0, -10%);
     margin-right: 10px;
     transition: all 400ms;
   }
@@ -577,7 +1037,7 @@
 
 /* amount radio */
 .filter__amount {
-  margin-left: 68px;
+  margin-right: 60px;
 }
 
 .amount-group {
@@ -599,7 +1059,6 @@
   height: 35px;
   background-color: white;
   transition: all 400ms;
-
   &:hover {
     opacity: 0.5;
   }
@@ -611,7 +1070,7 @@
 /* Filter button  */
 .filter__button {
   margin-top: 37px;
-  margin-left: 60px;
+  // margin-left: 60px;
   height: 40px;
 }
 
@@ -621,9 +1080,79 @@
 .amount-group__text {
   cursor: pointer;
 }
-
-/* ////////////Стилизация секции с товарами///////// */
-
+/////////////////////////////////
+@media (max-width: 767px) {
+  .filter {
+    padding-top: 22px;
+    padding-bottom: 22px;
+    font-size: 14px;
+    line-height: 19px;
+  }
+  .filter__title {
+    font-size: 14px;
+    line-height: 19px;
+    margin-bottom: 13px;
+  }
+  .filter__slider-values {
+    margin-right: 70px;
+  }
+  .filter__color {
+    margin-left: 0;
+    margin-right: 111px;
+  }
+  .filter__color-item:nth-child(n + 2) {
+    margin-top: 11px;
+  }
+  .filter__delivery {
+    margin-right: 30px;
+  }
+  .delivery-group__name {
+    &:before {
+      width: 16px;
+      height: 16px;
+      background-size: contain;
+      margin-right: 7px;
+    }
+  }
+  .delivery-group__item {
+    &:nth-child(n + 2) {
+      margin-top: 13px;
+    }
+  }
+  .filter__amount {
+    margin-left: 0px;
+  }
+  .filter__button {
+    height: 40px;
+    margin-top: 0px;
+    // justify-self: center;
+    margin-left: 123px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1300px) {
+  .filter {
+    padding-top: 31px;
+  }
+  .filter__wrapper {
+    row-gap: 16px;
+  }
+  .filter__slider-values {
+    margin-right: 70px;
+  }
+  .filter__color {
+    margin-right: 91px;
+  }
+  .filter__delivery {
+    // margin-right: 0px;
+  }
+  .filter__amount {
+    margin-right: 205px;
+  }
+  .filter__button {
+    margin-top: 32px;
+  }
+}
+////////////Стилизация секции с товарами/////////////////////////
 .toys-catalog {
   margin-top: 64px;
 }
@@ -635,15 +1164,40 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 20px;
+  row-gap: 46px;
   margin-bottom: 74px;
 }
 .toys-catalog__list-item {
   width: calc((100% - 20px * 2) / 3);
-  &:nth-child(n + 4) {
-    margin-top: 46px;
+  @media (max-width: 767px) {
+    width: calc((100% - 20px) / 2);
   }
 }
+.toys-catalog__img {
+  width: 100%;
+}
 
+////////////////////////////////////
+@media (max-width: 767px) {
+  .toys-catalog {
+    margin-top: 45px;
+  }
+  .toys-catalog__list {
+    margin-bottom: 36px;
+    row-gap: 27px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .toys-catalog {
+    margin-top: 45px;
+  }
+  .toys-catalog__list {
+    margin-bottom: 52px;
+    row-gap: 32px;
+  }
+}
+@media (min-width: 1400px) {
+}
 ////////////////////////////////////////////////////////////////////
 /////////////////////TOYS/////////end///////////////////////////
 ////////////////////////////////////////////////////////////////////
