--- a/source/scss/_blocks/checkbox.scss
+++ b/source/scss/_blocks/checkbox.scss
@@ -10,23 +10,22 @@
   &:before {
     content: "";
     display: block;
-    vertical-align: middle;
-    width: 20px;
-    height: 20px;
+    flex-shrink: 0;
+    // vertical-align: middle;
+    width: 19px;
+    height: 19px;
     background-image: url("../../img/icons/checkbox.svg");
     background-repeat: no-repeat;
     background-size: contain;
     // background-position: 40% 40%;
-    margin-right: 10px;
+    margin-right: 14px;
     transform: translate(0, -10%);
     @media (max-width: 767px) {
-      width: 30px;
-      height: 30px;
       margin-right: 14px;
       transform: translate(0, 7%);
     }
     @media (min-width: 768px) and (max-width: 1399px) {
-      margin-right: 15px;
+      margin-right: 16px;
     }
     &:hover {
       text-decoration: underline black;
