--- a/source/scss/_blocks/product.scss
+++ b/source/scss/_blocks/product.scss
@@ -9,15 +9,22 @@
     position: absolute;
     z-index: 1;
     background-color: #e5eaf8;
-    top: 18%;
+    bottom: 37%;
     left: 50%;
     transform: translate(-50%, 0);
     text-align: center;
     font-weight: 700;
     font-size: 26px;
-    line-height: 207px;
+    line-height: 200px;
+    vertical-align: middle;
     text-transform: uppercase;
     transition: all 400ms;
+    @media (min-width: 769px) and (max-width: 1399px) {
+      bottom: 28%;
+    }
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
 
   &:hover:before {
@@ -89,6 +96,4 @@
     font-size: 14px;
     line-height: 19px;
   }
-}
-@media (min-width: 1400px) {
 }
