--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -52,6 +52,10 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
   font-style: normal;
 }
+.font-grid {
+  font-family: "Lato", "Arial", sans-serif;
+  font-style: normal;
+}
 
 * {
   list-style-type: none;
