--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -44,10 +44,10 @@
             <a href="../../svg.html" class="header__nav-link">SVG</a>
           </li>
           <li class="header__list-item">
-            <a href="#" class="header__nav-link">Grid</a>
+            <a href="../grid.html" class="header__nav-link">Grid</a>
           </li>
           <li class="header__list-item">
-            <a href="#" class="header__nav-link">BTS</a>
+            <a href="../bootstrap.html" class="header__nav-link">BTS</a>
           </li>
         </ul>
       </nav>
@@ -88,7 +88,7 @@
           <a href="../../svg.html" class="header__nav-link">SVG</a>
         </li>
         <li class="header__mobile-list-item">
-          <a href="#" class="header__nav-link">Grid</a>
+          <a href="../../grid.html" class="header__nav-link">Grid</a>
         </li>
         <li class="header__mobile-list-item">
           <a href="../contactUs.html" class="header__mobile-contact-us-link"
