--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -27,6 +27,7 @@
 @import "_blocks/category";
 @import "_blocks/animation";
 @import "_blocks/svg";
+@import "_blocks/grid";
 /*
   Ниже пример подключения других блоков
 
@@ -533,7 +534,7 @@
     margin-right: 0;
     padding-top: 80px;
     column-gap: 20px;
-    margin-bottom: 154px;
+    margin-bottom: 133px;
   }
   .supplement__article {
     padding: 1px 14px 25px;
@@ -549,7 +550,7 @@
     margin-top: 20px;
   }
   .supplement__map {
-    margin-top: 22px;
+    margin-top: 0;
     height: 80%;
   }
 }
@@ -584,7 +585,8 @@
   }
   .supplement__map {
     margin-top: 0px;
-    height: 100%;
+    height: 195px;
+    margin-bottom: -76px;
   }
 }
 
