--- a/source/scss/_blocks/grid.scss
+++ b/source/scss/_blocks/grid.scss
@@ -88,6 +88,8 @@
 }
 .grid-iphone__image {
   display: block;
+  // width: 100%;
+  // height: 100%;
   margin-left: auto;
   margin-right: auto;
 }
