--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,6 +1,14 @@
 <div class="header">
   <div class="page-container">
     <header class="header__content">
+      <audio
+        class="header__audio-panel"
+        type="audio/mpeg"
+        controls
+        src="../../audio/1 - Drive You Crazy.mp3"
+      >
+        Тег audio не поддерживается вашим браузером
+      </audio>
       <a href="/index.html" class="header__logo-link">
         <svg
           width="102"
@@ -52,7 +60,7 @@
         </ul>
       </nav>
       <button class="header__menu-button">Menu</button>
-      <button class="header__menu-close u-hidden">
+      <button class="header__menu-close hidden-item">
         <span class="hidden-item">Close</span>
       </button>
       <svg
@@ -70,7 +78,7 @@
       </svg>
       <a href="../contactUs.html" class="header__contact-us-link">Contact us</a>
     </header>
-    <nav class="header__nav-mobile u-hidden">
+    <nav class="header__nav-mobile hidden-mobile">
       <ul class="header__nav-mobile-list">
         <li class="header__mobile-list-item">
           <a href="../blog.html" class="header__nav-link">Blog</a>
