--- a/source/scss/_blocks/animation.scss
+++ b/source/scss/_blocks/animation.scss
@@ -11,6 +11,7 @@
   margin-top: 8.3%;
   margin-bottom: 3.6%;
   width: 100%;
+  height: 100%;
 }
 
 .animation__sun {
@@ -18,6 +19,7 @@
   top: 0.4%;
   right: 18.3%;
   width: 3.5%;
+  height: 6.5%;
 }
 ///////////////////////////////Анимации облаков///////////////////////////
 .animation__cloud1 {
@@ -25,6 +27,7 @@
   top: 1.5%;
   left: 12.8%;
   width: 5.6%;
+  height: 5.5%;
   animation: cloud1-moving 50s ease infinite alternate 1s;
 }
 @keyframes cloud1-moving {
@@ -43,6 +46,7 @@
   top: 5.7%;
   left: 29.2%;
   width: 11.6%;
+  height: 5.5%;
   animation: cloud2-moving 40s ease infinite alternate 1s;
 }
 @keyframes cloud2-moving {
@@ -61,6 +65,7 @@
   top: 1.4%;
   left: 44.6%;
   width: 9.4%;
+  height: 5.5%;
   animation: cloud3-moving 30s ease infinite alternate 1s;
 }
 @keyframes cloud3-moving {
@@ -79,6 +84,7 @@
   top: 11.4%;
   left: 51.7%;
   width: 12%;
+  height: 5.5%;
   animation: cloud4-moving 30s ease infinite alternate 1s;
 }
 @keyframes cloud4-moving {
@@ -97,6 +103,7 @@
   top: 5.7%;
   left: 69.3%;
   width: 5.5%;
+  height: 5.5%;
   animation: cloud5-moving 60s ease infinite alternate 1s;
 }
 @keyframes cloud5-moving {
@@ -115,6 +122,7 @@
   top: 5.5%;
   left: 83.5%;
   width: 10%;
+  height: 5.5%;
   animation: cloud6-moving 65s ease infinite alternate 1s;
 }
 @keyframes cloud6-moving {
@@ -135,6 +143,7 @@
   left: -20%;
   top: 51.2%;
   width: 15%;
+  height: 11.5%;
   z-index: 2;
   animation: car1-moving 5s linear infinite 1s;
 }
@@ -150,6 +159,7 @@
 .animation__car1-wheel-2 {
   top: 57.9%;
   width: 2.6%;
+  height: 5.5%;
   z-index: 2;
 }
 .animation__car1-wheel-1 {
@@ -191,6 +201,7 @@
   // left: 27.5%; //макет
   left: -20%;
   width: 12.5%;
+  height: 11.5%;
   z-index: 2;
   animation: car2-moving 3s linear infinite 3s;
 }
@@ -206,6 +217,7 @@
 .animation__car2-wheel-2 {
   top: 58.9%;
   width: 2%;
+  height: 4.5%;
   z-index: 2;
 }
 .animation__car2-wheel-1 {
@@ -247,6 +259,7 @@
   left: -20%;
   top: 52.8%;
   width: 14.8%;
+  height: 8%;
   animation: car3-moving 9s linear infinite 5s;
 }
 @keyframes car3-moving {
@@ -261,6 +274,7 @@
 .animation__car3-wheel-2 {
   top: 57.3%;
   width: 1.7%;
+  height: 3.5%;
   z-index: 1;
 }
 .animation__car3-wheel-1 {
@@ -302,6 +316,7 @@
   left: -20%;
   top: 49.5%;
   width: 16%;
+  height: 15%;
   z-index: 2;
   animation: car4-moving 7s linear infinite 8s;
 }
@@ -317,6 +332,7 @@
 .animation__car4-wheel-2 {
   top: 58.9%;
   width: 2.8%;
+  height: 5.5%;
   z-index: 2;
 }
 .animation__car4-wheel-1 {
@@ -358,6 +374,7 @@
   left: 34.3%;
   top: 20.8%;
   width: 9%;
+  height: 47.5%;
   z-index: 4;
 }
 .animation__lantern2 {
@@ -365,6 +382,7 @@
   left: 86.3%;
   top: 21.1%;
   width: 9%;
+  height: 47.5%;
   z-index: 4;
 }
 .animation__lantern-color {
@@ -372,6 +390,7 @@
   left: 69.5%;
   top: 19.6%;
   width: 12.9%;
+  height: 67.5%;
   z-index: 9;
 }
 
@@ -380,6 +399,7 @@
   left: 18.6%;
   top: 54.8%;
   width: 11.5%;
+  height: 33.5%;
   z-index: 6;
 }
 .animation__skirt {
@@ -387,6 +407,7 @@
   left: 19.4%;
   top: 70.2%;
   width: 5.5%;
+  height: 7.5%;
   z-index: 8;
 }
 
@@ -395,6 +416,7 @@
   left: 25.6%;
   top: 44.5%;
   width: 12.3%;
+  height: 43.5%;
   z-index: 9;
 }
 /////////////////////////////// Облако собщений/////////////////////////
@@ -403,19 +425,19 @@
   position: relative;
   box-sizing: border-box;
   width: 172px;
-  padding: 16px;
+  padding: 1vw;
   font-size: 17px;
   line-height: 21px;
   background-color: #fff;
-  border-radius: 13px;
+  border-radius: 1vw;
   text-align: left;
   &::after {
     position: absolute;
     top: 80%;
     content: "";
     display: block;
-    width: 42px;
-    height: 42px;
+    width: 3vw;
+    height: 60%;
     background-image: url("../img/icons/corner.svg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -436,6 +458,19 @@
 ///////////////////////////Анимация///////////////////////////////////////////
 
 ////////////////////////////Действие 1 - сообщение женщины//////////////////////
+.animation__message-cloud-left,
+.animation__message-cloud-right {
+  font-size: 1vw;
+  line-height: 1vw;
+}
+.animation__message-cloud-left {
+  width: 10vw;
+  height: 4vw;
+}
+.animation__message-cloud-right {
+  width: 10vw;
+  height: 4vw;
+}
 .animation__message-1 {
   position: absolute;
   left: 13.4%;
@@ -444,6 +479,7 @@
   visibility: hidden;
   animation: text1-appearing 12s linear infinite 4s;
 }
+
 @keyframes text1-appearing {
   0% {
     visibility: hidden;
@@ -464,6 +500,7 @@
   left: 20.8%;
   top: 68.1%;
   width: 3.6%;
+  height: 6.5%;
   z-index: 7;
   transform: rotate(360deg);
   transform-origin: 22% 19%;
@@ -506,6 +543,7 @@
   left: 25.8%;
   top: 40.4%;
   width: 5%;
+  height: 14.5%;
   z-index: 8;
   transform: rotate(153deg);
   transform-origin: 12% 90%;
@@ -557,6 +595,7 @@
   // left: 41.2%; //макет
   top: 48.1%;
   width: 53.4%;
+  height: 32.5%;
   z-index: 5;
   animation: taxi-moving 12s ease-in-out infinite 8s;
 }
@@ -578,6 +617,7 @@
 .animation__taxi-wheel-2 {
   top: 69.5%;
   width: 4%;
+  height: 8.5%;
   z-index: 5;
 }
 .animation__taxi-wheel-1 {
