--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -290,9 +290,11 @@
 }
 .service__picture {
   width: 40%;
+  height: 40%;
 }
 .service__img {
   width: 100%;
+  height: 100%;
 }
 .service__info {
   padding: 32px 100px 57px 127px;
@@ -408,6 +410,7 @@
 @media (max-width: 500px) {
   .service__picture {
     width: 100%;
+    height: 100%;
   }
   .service {
     margin-top: 79px;
@@ -442,6 +445,7 @@
 
 .partners__logo {
   width: 100%;
+  height: 100%;
 }
 @media (min-width: 376px) and (max-width: 768px) {
   .partners__list {
@@ -657,6 +661,7 @@
 }
 .articles__img {
   width: 100%;
+  height: 80%;
 }
 .articles__date {
   display: block;
@@ -753,8 +758,6 @@
 }
 .catalog__description-text > p:nth-child(n + 2) {
   margin-top: 15px;
-}
-.catalog__name {
 }
 
 @media (max-width: 767px) {
@@ -1178,6 +1181,7 @@
 }
 .toys-catalog__img {
   width: 100%;
+  height: 100%;
 }
 
 ////////////////////////////////////
